Clase 5 - React - Desafio 4

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,88 @@
     transform: rotate(360deg);
   }
 }
+
+.cart-quantity {
+  color: white;
+  background-color: red;
+  padding: .2em .3em;
+  position: relative;
+  margin: .8em 7.5em 0 0;
+  right: 0;
+  border: solid 2px red;
+  border-radius: 15px;
+  font-weight: bolder;
+}
+
+img{
+  width: 37px;
+  height: 75px;
+}
+
+
+
+
+/*--*/
+body {
+  background-color: #3289cd
+}
+
+.card {
+  width: 350px;
+  border: none;
+  border-radius: 5px
+}
+
+.container {
+  height: 100vh
+}
+
+.top {
+  padding: 18px;
+  background-color: #ff8900;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  color: #fff
+}
+
+.middle {
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column !important;
+  padding: 10px
+}
+
+.bottom {
+  padding: 10px;
+  background: #eee;
+  padding-top: 30px
+}
+
+.input-group {
+  width: 109px
+}
+
+.add {
+  height: 38px;
+  width: 200px;
+  border-radius: 4px;
+  margin-left: 10px;
+  padding-right: 22px;
+  padding-left: 20px
+}
+
+.form-control:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #8bbafe;
+  outline: 0;
+  box-shadow: none;
+  text-align: center;
+}
+
+.form-control{
+  text-align: center;
+}
+
